menambahkan fitur bahasa indonesia, pencarian bahasa indonesia, atur lebar lightbox menjadi 100% di ukuran smartphone, penambahan list pencarian populer

--- a/index.html
+++ b/index.html
@@ -41,6 +41,10 @@
             <input type="text" placeholder="Search for all image here">
          </div>
       </div>
+      <div class="language">
+         <p><a class="en active" href="#">EN</a></p>
+         <p><a class="id" href="#">ID</a></p>
+      </div>
       <div class="information">
          <p>Develop by <a href="https://t.me/YourKey92">Key</a></p>
       </div>
@@ -84,6 +88,7 @@
    <section class="popular-keyword">
       <ul>
          <li>nature</li>
+         <li>rain</li>
          <li>wallpaper</li>
          <li>background</li>
          <li>sky</li>
@@ -97,7 +102,7 @@
    </section>
    <section class="images-galery">
       <ul class="images"></ul>
-      <button class="load-more">Load More</button>
+      <button class="load-more"></button>
    </section>
    <section class="message-handling">
       <h2>Sorry, we couldn't find any matches</h2>
