atur lebar untuk image-name lightbox menjadi 75%

--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
             <img src="" alt="">
          </div>
          <div class="image-name">
-            <p>Back View of a Person Standing on a Vast</p>
+            <p></p>
          </div>
       </div>
    </section>
@@ -94,7 +94,7 @@
          <li>sky</li>
          <li>flowers</li>
          <li>food</li>
-         <li>water</li>
+         <li>beach</li>
          <li>love</li>
          <li>cat</li>
          <li>forest</li>
