--- a/index.html
+++ b/index.html
@@ -5,10 +5,10 @@
    <meta http-equiv="X-UA-Compatible" content="IE=edge">
    <meta name="viewport" content="width=device-width, initial-scale=1.0">
    <title>Images Galery</title>
-   <link rel="stylesheet" href="style.css">
+   <link rel="stylesheet" href="css/style.css">
    <!-- Fontawesome Link for Icon -->
    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css" integrity="sha512-iecdLmaskl7CVkqkXNQ/ZH/XLlvWZOJyj7Yy7tcenmpD1ypASozpmT/E0iPtmFIB46ZmdtAc9eNBvH0H/ZpiBw==" crossorigin="anonymous" referrerpolicy="no-referrer" />
-   <script src="script.js" defer></script>
+   <script src="js/script.js" defer></script>
 </head>
 <body>
    <section class="ligthbox">
@@ -32,7 +32,7 @@
       </div>
    </section>
    <section class="search-box">
-      <img src="images/bg.jpg" alt="">
+      <img src="asset/bg.jpg" alt="">
       <div class="content">
          <h1>Stunning royalty-free images & royalty-free stock</h1>
          <p>Over 4 million+ high quality stock images, videos and music shared by our talented community.</p>
