--- a/index.html
+++ b/index.html
@@ -34,8 +34,8 @@
    <section class="search-box">
       <img src="asset/bg.jpg" alt="">
       <div class="content">
-         <h1>Stunning royalty-free images & royalty-free stock</h1>
-         <p>Over 4 million+ high quality stock images, videos and music shared by our talented community.</p>
+         <h1>Discover Exquisite Collection of Royalty-Free Images</h1>
+         <p>Over 1 million+ high quality stock images, videos and music shared by our talented community.</p>
          <div class="search">
             <i class="fa-solid fa-magnifying-glass"></i>
             <input type="text" placeholder="Search for all image here">
